--- a/index.css
+++ b/index.css
@@ -450,34 +450,41 @@ footer {
     margin: auto;
     margin-top: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     /* justify-content: space-evenly; */
     gap: 10px;
+    /* background: #6563ff; */
 
     /* gap: 20px; */
     /* margin: auto; */
 }
-
-a {
+.social-media {
     /* outline: 2px solid blue; */
-
-    width: 100px;
-    height: 100px;
-    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+.social {
+    /* outline: 2px solid blue; */
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
 }
 .fig {
     /* outline: 2px solid green; */
-    width: 100px;
-    height: 100px;
-
-    /* margin: 20px 0; */
-    /* align-items: center; */
-    /* justify-content: space-evenly;
-    align-content: space-around; */
-    /* margin: auto */
+    width: 50px;
+    height: 50px;
 }
 
 .img-g {
     width: 100%;
+}
+
+.media {
+    /* outline: 2px solid green; */
+    padding: 0;
+    margin: 0;
+    color: #6563ff;
 }
