--- a/index.css
+++ b/index.css
@@ -15,14 +15,20 @@
     background: rgb(255, 255, 255);
     margin: auto;
 }
-/* .name {
-    outline: 2px solid green;
-    width: 85%;
-    height: 80px;
-} */
 
-.home {
+.skills {
     grid-column: 5/6;
+}
+
+.nav__link {
+    text-decoration: none;
+    text-align: center;
+    align-self: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+    color: black;
+    text-decoration: none;
 }
 
 .items {
@@ -31,6 +37,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     font-size: 1rem;
+    text-decoration: none;
 }
 
 /* PRESENTACIÓN */
@@ -48,17 +55,16 @@
 .presentation {
     grid-column: 1/2;
     /* outline: 2px solid rgb(61, 218, 108); */
-    width: 400px;
-    height: 300px;
-    align-self: center;
-    justify-self: center;
+    width: 80%;
+    height: 50%;
+    place-self: center;
 }
 
 .hi {
     font-family: 'Roboto', sans-serif;
     font-size: 3rem;
     text-align: center;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     color: #6563ff;
     /* outline: 2px solid blue; */
 }
@@ -83,16 +89,15 @@
 figure {
     grid-column: 2/3;
     /* outline: 2px solid black; */
-    width: 350px;
-    height: 350px;
-    align-self: center;
-    justify-self: center;
+    width: 60%;
+    height: 60%;
+    place-self: center;
 }
 
 .img-me {
     /* outline: 2px solid crimson; */
     width: 100%;
-    font-size: 2rem;
+    place-self: center;
 }
 
 /***************************************************************/
@@ -142,99 +147,80 @@ h1 {
 }
 
 .img-icon-b {
-    width: 30px;
-    height: 30px;
+    width: 40%;
+    height: 60%;
+
+    /* grid-row: 1/2; */
 }
 .img-icon {
     width: 80px;
     height: 80px;
 }
 .img-i {
+    /* outline: 2px solid blue; */
     width: 100%;
 }
 
 /* frontend developer */
+.bv-row {
+    grid-row: 1/2;
+}
 .brackets {
     grid-column: 1/2;
-    grid-row: 1/2;
 }
 
 .title-frontend {
     grid-column: 2/4;
-    grid-row: 1/2;
 }
 
 /* designer */
 .title-designer {
     grid-column: 7/8;
-    grid-row: 1/2;
 }
 .vector {
     grid-column: 6/7;
-    grid-row: 1/2;
 }
 
-/* html */
-.html {
-    grid-column: 2/3;
+/* iconos y nombres */
+.html,
+.js,
+.ps,
+.ai {
     grid-row: 3/4;
 }
-
-.html-name {
-    grid-column: 2/3;
+.html-name,
+.js-name,
+.ps-name,
+.ai-name {
     grid-row: 4/5;
 }
-
-/* css */
-.css {
-    grid-column: 2/3;
+.css,
+.git {
     grid-row: 5/6;
 }
-
+.css-name,
+.git-name {
+    grid-row: 6/7;
+}
+.html,
+.html-name,
+.css,
 .css-name {
     grid-column: 2/3;
-    grid-row: 6/7;
 }
-/* js */
-.js {
-    grid-column: 4/5;
-    grid-row: 3/4;
-}
-
-.js-name {
-    grid-column: 4/5;
-    grid-row: 4/5;
-}
-
-/* github */
-.git {
-    grid-column: 4/5;
-    grid-row: 5/6;
-}
-
+.js,
+.js-name,
+.git,
 .git-name {
     grid-column: 4/5;
-    grid-row: 6/7;
 }
-
-/* photoshop */
-.ps {
-    grid-column: 7/8;
-    grid-row: 3/4;
-}
+.ps,
 .ps-name {
     grid-column: 7/8;
-    grid-row: 4/5;
 }
-
-.ai {
-    grid-column: 9/10;
-    grid-row: 3/4;
-}
-
+.ai,
 .ai-name {
     grid-column: 9/10;
-    grid-row: 4/5;
 }
 
 .icon-name {
@@ -246,9 +232,7 @@ h1 {
 }
 
 /* QUALIFICATION */
-/* .qualification-title {
-    outline: 2px solid palevioletred;
-} */
+
 .qualification {
     padding-bottom: 7px;
 }
@@ -264,34 +248,24 @@ h1 {
     grid-template-rows: repeat(8, 1fr);
 }
 
-.title-w {
+.title-e,
+.education1 {
+    grid-column: 2/3;
+}
+.title-w,
+.work1 {
     grid-column: 4/5;
-    grid-row: 1/2;
 }
-.title-e {
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
-.artes {
-    grid-column: 2/3;
+.artes,
+.foto {
     grid-row: 2/3;
 }
-.uady {
-    grid-column: 2/3;
+.uady,
+.cabimax {
     grid-row: 4/5;
 }
 .udemy {
-    grid-column: 2/3;
     grid-row: 6/7;
-}
-.foto {
-    grid-column: 4/5;
-    grid-row: 2/3;
-}
-.cabimax {
-    grid-column: 4/5;
-    grid-row: 4/5;
 }
 
 h4 {
@@ -313,38 +287,30 @@ h4 {
 
 .line {
     background: #6563ff;
-    width: 3px;
-    height: 340px;
+    width: 2%;
+    height: 80%;
     grid-column: 3/4;
     grid-row: 2/7;
-    justify-self: center;
-    align-self: center;
+    place-self: center;
 }
 .clean {
-    width: 15px;
-    height: 15px;
+    width: 8%;
+    height: 8%;
+    grid-column: 3/4;
+    place-self: center;
 }
 .clean-dry {
     width: 100%;
 }
 
 .clean1 {
-    grid-column: 3/4;
     grid-row: 2/3;
-    justify-self: center;
-    align-self: center;
 }
 .clean2 {
-    grid-column: 3/4;
     grid-row: 4/5;
-    justify-self: center;
-    align-self: center;
 }
 .clean3 {
-    grid-column: 3/4;
     grid-row: 6/7;
-    justify-self: center;
-    align-self: center;
 }
 
 /************************************************************/
@@ -360,76 +326,43 @@ h4 {
 }
 
 .fig-proyect {
-    width: 250px;
-    height: 250px;
+    width: 80%;
+    height: 80%;
 }
 
 .img-proyect {
     width: 100%;
     object-fit: cover;
 }
-/* calendario */
-.name-calendario {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 1/2;
+
+.name-proyect {
     grid-row: 1/2;
 }
-
-.calendario {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 1/2;
+.fig-proyect {
     grid-row: 2/3;
 }
 
+.name-calendario,
+.calendario,
 .calendario-btn {
-    /* outline: 2px solid blueviolet; */
     grid-column: 1/2;
-    grid-row: 3/4;
 }
-
-/* cabina */
-.name-cabina {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
-.cabina {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
+.name-cabina,
+.cabina,
 .cabina-btn {
-    /* outline: 2px solid blueviolet; */
     grid-column: 2/3;
-    grid-row: 3/4;
 }
-
-/* MIA */
-.name-mia {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 3/4;
-    grid-row: 1/2;
-}
-
-.mia {
-    /* outline: 2px solid blueviolet; */
-    grid-column: 3/4;
-    grid-row: 2/3;
-}
-
+.name-mia,
+.mia,
 .mia-btn {
-    /* outline: 2px solid blueviolet; */
     grid-column: 3/4;
-    grid-row: 3/4;
 }
 
 .btn {
     /* outline: 2px solid blueviolet; */
     text-decoration: none;
-    width: 110px;
-    height: 40px;
+    width: 40%;
+    height: 30%;
     background: #8280fa;
     text-align: center;
     padding: 9px 0;
@@ -439,6 +372,7 @@ h4 {
     font-size: 0.9rem;
     place-self: center;
     font-weight: 700;
+    grid-row: 3/4;
 }
 
 /* FOOTER */
@@ -487,4 +421,101 @@ footer {
     padding: 0;
     margin: 0;
     color: #6563ff;
+}
+
+/* *-----------------------RESPONSIVE--------------------------- */
+@media screen and (max-width: 1127px) {
+    /* .img-me {
+        padding-top: 80px;
+    } */
+    .container-skills {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+
+    .skills {
+        grid-column: 3/4;
+    }
+    .qualif {
+        grid-column: 4/6;
+    }
+    .portfolio {
+        grid-column: 6/7;
+    }
+    .about {
+        grid-column: 7/9;
+    }
+    /* -----------------skill------------------ */
+    .img-icon-b {
+        /* outline: 2px solid orangered; */
+        grid-row: 1/2;
+        place-self: center;
+    }
+    .brackets {
+        width: 30%;
+        grid-column: 1/2;
+    }
+    .vector {
+        grid-column: 5/6;
+    }
+
+    .title-frontend {
+        grid-column: 2/4;
+    }
+    .title-designer {
+        grid-column: 6/7;
+    }
+    .html,
+    .js,
+    .ps {
+        grid-row: 3/4;
+    }
+    .html-name,
+    .js-name,
+    .ps-name {
+        grid-row: 4/5;
+    }
+    .css,
+    .git,
+    .ai {
+        grid-row: 5/6;
+    }
+    .css-name,
+    .git-name,
+    .ai-name {
+        grid-row: 6/7;
+    }
+    .html,
+    .html-name,
+    .css,
+    .css-name {
+        grid-column: 1/3;
+    }
+    .js,
+    .js-name,
+    .git,
+    .git-name {
+        grid-column: 3/4;
+    }
+    .ps,
+    .ps-name,
+    .ai,
+    .ai-name {
+        grid-column: 6/7;
+    }
+}
+
+@media screen and (max-width: 1053px) {
+    .work-education {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+    }
+    .uady {
+        grid-row: 3/6;
+        place-self: center;
+    }
+    .udemy {
+        grid-row: 6/7;
+    }
 }
